--- a/Libft/ft_split.dSYM/Contents/Info.plist
+++ b/Libft/ft_split.dSYM/Contents/Info.plist
@@ -5,7 +5,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>English</string>
 		<key>CFBundleIdentifier</key>
-		<string>com.apple.xcode.dsym.ft_itoa</string>
+		<string>com.apple.xcode.dsym.ft_split</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundlePackageType</key>
