--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: ckarl <marvin@42lausanne.ch>               +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2022/11/25 13:33:18 by ckarl             #+#    #+#              #
+#    Updated: 2022/11/25 13:33:26 by ckarl            ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 SRCS		= ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c \
 			ft_isascii.c ft_isdigit.c ft_isprint.c ft_itoa.c ft_memchr.c \
 			ft_memcmp.c ft_memcpy.c ft_memmove.c ft_memset.c ft_split.c ft_strchr.c \
@@ -6,9 +18,10 @@ SRCS		= ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c \
 			ft_toupper.c ft_strmapi.c ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c \
 			ft_putnbr_fd.c
 
-BONUS_SRCS	= ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c
+BONUS_SRCS	= ft_lstnew_bonus.c ft_lstadd_front_bonus.c ft_lstsize_bonus.c ft_lstlast_bonus.c \
+			ft_lstadd_back_bonus.c ft_lstdelone_bonus.c ft_lstclear_bonus.c ft_lstiter_bonus.c ft_lstmap_bonus.c
 
-BONUS_OBJS	= ${BONUS_SRCS: .c=_bonus.o}
+BONUS_OBJS	= ${BONUS_SRCS:.c=.o}
 
 OBJS		= ${SRCS:.c=.o}
 
@@ -25,22 +38,20 @@ RM			= rm -f
 .c.o:
 			${CC} ${CFLAGS} -c $< -o ${<:.c=.o}
 
-${NAME}:	${OBJS}
-			ar rc ${NAME} ${OBJS}
-
-${BNAME}:	${BONUS_OBJS}
-			ar rc ${BNAME} ${BONUS_OBJS}
-
 all:		${NAME}
 
-bonus:		${BNAME}
+${NAME}:	${OBJS}
+			ar rcs ${NAME} ${OBJS}
+
+bonus:		${OBJS} ${BONUS_OBJS}
+			ar rcs ${NAME} ${OBJS} ${BONUS_OBJS}
 
 clean:
-			${RM} ${OBJS}
+			${RM} ${OBJS} ${BONUS_OBJS}
 
 fclean:		clean
 			${RM} ${NAME}
 
 re:			fclean all
 
-.PHONY:		all clean fclean re
+.PHONY:		all clean fclean re bonus
