--- a/fractol/libft/Makefile
+++ b/fractol/libft/Makefile
@@ -16,7 +16,7 @@ SRCS		= ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c \
 			ft_strdup.c ft_strjoin.c ft_strlcat.c ft_strlcpy.c ft_strlen.c\
 			ft_strncmp.c ft_strnstr.c ft_strrchr.c ft_strtrim.c ft_substr.c ft_tolower.c \
 			ft_toupper.c ft_strmapi.c ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c \
-			ft_putnbr_fd.c ft_strcmp.c ft_printf.c ft_printbasics.c ft_printptr.c ft_printhex.c ft_itoa_u.c \
+			ft_putnbr_fd.c ft_printf.c ft_printbasics.c ft_printptr.c ft_printhex.c ft_itoa_u.c \
 			ft_printnbr.c
 
 BONUS_SRCS	= ft_lstnew_bonus.c ft_lstadd_front_bonus.c ft_lstsize_bonus.c ft_lstlast_bonus.c \
