err management ok, case meal=0 & philo=1 handled, time still too long

--- a/philosophers/philo/Makefile
+++ b/philosophers/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: ckarl <ckarl@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/05 12:26:41 by ckarl             #+#    #+#              #
-#    Updated: 2023/09/07 15:38:29 by ckarl            ###   ########.fr        #
+#    Updated: 2023/09/13 17:31:04 by ckarl            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -25,9 +25,10 @@ OBJS_PATH	:= objs
 	### SOURCE FILES ###
 MAIN_FILE	:= main.c
 UTILS_FILES	:=	init.c		\
-				helpers.c	\
-				utils.c		\
+				utils_1.c	\
+				utils_2.c	\
 				routine.c	\
+				checks.c	\
 
 	### OBJECTS ###
 UTILS_FILES := $(addprefix $(OBJS_PATH)/, $(UTILS_FILES:.c=.o))
