--- a/philosophers/philo/Makefile
+++ b/philosophers/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: ckarl <ckarl@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/05 12:26:41 by ckarl             #+#    #+#              #
-#    Updated: 2023/09/13 17:31:04 by ckarl            ###   ########.fr        #
+#    Updated: 2023/09/15 12:01:44 by ckarl            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -29,6 +29,7 @@ UTILS_FILES	:=	init.c		\
 				utils_2.c	\
 				routine.c	\
 				checks.c	\
+				forks.c		\
 
 	### OBJECTS ###
 UTILS_FILES := $(addprefix $(OBJS_PATH)/, $(UTILS_FILES:.c=.o))
